# StatuteSearch

./: .breakpoints  .replit  LICENSE  README.md  choose_law.py  get_option_for_query.py  pyproject.toml  replit.nix  section_retrieval.py  statute_app.py
.chainlit/: config.toml
question_answering/: chat_completion.py  conversation.py  openai_api.py
streamlit/: app.py
streamlit/civix/: .test_document.py.2533845169~  SBC 2002, c 1.json  bclaws_search.py  content.py  data.py  document.py  get_statutes.py  retrieve_statute.py  utils.py
streamlit/civix/data/: all_statutes_20230502_195936_849records.csv  all_statutes_20230502_195936_849records.json
streamlit/civix/embeddings_search/: generate_embeddings.py  new_search.py  search.py  statute_dict.py
streamlit/civix/embeddings_search/data/: Agricultural Land Commission Act, SBC 2002, c 36.csv  Apology Act, SBC 2006, c 19.csv  B.C. Rail Benefits (First Nations) Trust Act, SBC 2004, c 58.csv  Builders Lien Act, SBC 1997, c 45.csv  Commercial Tenancy Act, RSBC 1996, c 57.csv  Court Rules Act, RSBC 1996, c 80.csv  Court of Appeal Act, SBC 2021, c 6.csv  Ecological Reserve Act, RSBC 1996, c 103.csv  Farm Income Insurance Act, RSBC 1996, c 130.csv  Farm Practices Protection (Right to Farm) Act, RSBC 1996, c 131.csv  Farming and Fishing Industries Development Act, RSBC 1996, c 134.csv  Great Bear Rainforest (Forest Management) Act, SBC 2016, c 16.csv  Greenbelt Act, RSBC 1996, c 176.csv  Insurance Corporation Act, RSBC 1996, c 228.csv  Law and Equity Act, RSBC 1996, c 253.csv  (+19 more)
streamlit/pages/: citation_finder.py  forms.py
